--- a/frontend/src/app/pages/items-list/items-list.component.html
+++ b/frontend/src/app/pages/items-list/items-list.component.html
@@ -1,6 +1,7 @@
 <div class="items-list">
-    <app-list-item *ngFor="let item of items$ | async"
-                   [item]="item"
-                   (addToShipment)="addItemToShipment(item.id)">
-    </app-list-item>
+  <app-list-item
+    *ngFor="let item of items$ | async"
+    [item]="item">
+   <!-- (addToShipment)="addItemToShipment(item.id)" -->
+  </app-list-item>
 </div>
