--- a/frontend/src/app/pages/item-details/item-details.component.html
+++ b/frontend/src/app/pages/item-details/item-details.component.html
@@ -1,24 +1,3 @@
 <div *ngIf="item$ | async as item" class="item-details">
-  <form (ngSubmit)="onSubmit()" #itemForm="ngForm">
-    <div class="container">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" [(ngModel)]="item.name" required />
-
-      <label for="description">Description:</label>
-      <input
-        type="text"
-        id="description"
-        name="description"
-        [(ngModel)]="item.description"
-        required
-      />
-
-      <label for="quantity">Quantity:</label>
-      <input type="number" id="quantity" name="quantity" [(ngModel)]="item.quantity" required />
-
-      <label for="unitPrice">Unit Price:</label>
-      <input type="number" id="unitPrice" name="unitPrice" [(ngModel)]="item.unitPrice" required />
-    </div>
-    <button type="submit" [disabled]="!itemForm.form.valid">Save</button>
-  </form>
+  <app-item-form [item]="item" (onSubmit)="onUpdate($event)"></app-item-form>
 </div>
