--- a/frontend/src/app/core/components/item-form/item-form.component.html
+++ b/frontend/src/app/core/components/item-form/item-form.component.html
@@ -25,6 +25,6 @@
         required
       />
     </div>
-    <button type="submit" [disabled]="!itemForm.form.valid">Save</button>
+    <button type="submit" [disabled]="!itemForm.form.valid">{{ submitText }}</button>
   </form>
 </div>
