--- a/frontend/src/app/pages/item-details/item-details.component.html
+++ b/frontend/src/app/pages/item-details/item-details.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="item$ | async as item" class="item-details">
-  <app-item-form [item]="item" (onSubmit)="onUpdate($event)"></app-item-form>
+  <app-item-form [item]="item" (onSubmit)="onUpdate($event)" submitText="Update"></app-item-form>
 </div>
