feat: add delete

--- a/frontend/src/app/pages/item-details/item-details.component.html
+++ b/frontend/src/app/pages/item-details/item-details.component.html
@@ -1,3 +1,4 @@
 <div *ngIf="item$ | async as item" class="item-details">
   <app-item-form [item]="item" (onSubmit)="onUpdate($event)" submitText="Update"></app-item-form>
+  <button (click)="onDelete(item.id)">Delete</button>
 </div>
