--- a/frontend/src/app/core/components/item-form/item-form.component.scss
+++ b/frontend/src/app/core/components/item-form/item-form.component.scss
@@ -10,14 +10,24 @@ label {
 }
 
 input {
-  padding: 5px;
+  padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.6rem;
+}
 button {
-  margin-top: 10px;
-  padding: 10px 20px;
+  &.submit {
+    background-color: #007bff;
+  }
+  &.delete {
+    background-color: #dc3545;
+  }
+  margin-top: 1rem;
+  padding: 0.5rem 0.7rem;
   background-color: #007bff;
   color: white;
   border: none;
