--- a/frontend/src/app/pages/item-create/item-create.component.html
+++ b/frontend/src/app/pages/item-create/item-create.component.html
@@ -1,3 +1,3 @@
-<div class="item-details">
+<div class="item-create">
   <app-item-form (onSubmit)="onCreate($event)" submitText="Create"></app-item-form>
 </div>
