--- a/frontend/src/app/pages/item-details/item-details.component.scss
+++ b/frontend/src/app/pages/item-details/item-details.component.scss
@@ -29,3 +29,17 @@ button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.item-details {
+  margin-top: 1rem;
+  padding: 2rem;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  background: #fefefe;
+  -webkit-box-shadow:
+    12px 12px 24px #d8d8d8,
+    -12px -12px 24px #fff;
+  box-shadow:
+    12px 12px 24px #d8d8d8,
+    -12px -12px 24px #fff;
+}
