feat: add shipment item cart

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -91,4 +91,5 @@
   <span style="display: none"> warehouse app is running! </span>
   <app-navigation></app-navigation>
   <router-outlet></router-outlet>
+  <app-shipment-cart></app-shipment-cart>
 </div>
