--- a/frontend/src/app/pages/item-create/item-create.component.scss
+++ b/frontend/src/app/pages/item-create/item-create.component.scss
@@ -1,13 +1,5 @@
+@import "../../../styles/mixins";
+
 .item-create {
-  margin-top: 1rem;
-  padding: 2rem;
-  -webkit-border-radius: 50px;
-  border-radius: 50px;
-  background: #fefefe;
-  -webkit-box-shadow:
-    12px 12px 24px #d8d8d8,
-    -12px -12px 24px #fff;
-  box-shadow:
-    12px 12px 24px #d8d8d8,
-    -12px -12px 24px #fff;
+  @include item-details-style;
 }
