--- a/frontend/src/app/pages/items-list/list-item/list-item.component.html
+++ b/frontend/src/app/pages/items-list/list-item/list-item.component.html
@@ -10,5 +10,11 @@
   </div>
   <span>{{ item.quantity }}x</span>
   <span>{{ item.unitPrice | currency: "EUR" }}</span>
-  <button class="list-item--button" (click)="addToShipment.emit()">Add to Shipment</button>
+  <button
+    class="list-item--button"
+    [disabled]="item.quantity < 1"
+    (click)="addToShipment.emit(item.id)"
+  >
+    Add to Shipment
+  </button>
 </div>
