feat: create shipment

--- a/frontend/src/app/core/components/shipment-cart/shipment-cart.component.html
+++ b/frontend/src/app/core/components/shipment-cart/shipment-cart.component.html
@@ -9,6 +9,6 @@
       </li>
     </ul>
     <button (click)="onShipmentClear()">Clear Cart</button>
-    <button>Ship Items</button>
+    <button (click)="onShipmentCreate()">Ship Items</button>
   </section>
 </div>
