--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -1,13 +1,9 @@
 @mixin item-details-style {
   margin-top: 1rem;
   padding: 2rem;
-  -webkit-border-radius: 50px;
-  border-radius: 50px;
+  border-radius: 1rem;
   background: #fefefe;
-  -webkit-box-shadow:
-    12px 12px 24px #d8d8d8,
-    -12px -12px 24px #fff;
-  box-shadow:
-    12px 12px 24px #d8d8d8,
-    -12px -12px 24px #fff;
+  border: 1px solid #dfdfdf;
+
+  box-shadow: 12px 12px 24px #d8d8d8;
 }
