--- a/frontend/src/app/core/components/shipment-cart/shipment-cart.component.scss
+++ b/frontend/src/app/core/components/shipment-cart/shipment-cart.component.scss
@@ -2,7 +2,36 @@
 
 .shipment-cart {
   @include item-details-style;
+  padding: 1rem;
   position: fixed;
   right: 2rem;
   bottom: 2rem;
+
+  li {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    list-style-type: none;
+  }
+  .button-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.6rem;
+    button {
+      &.ship {
+        background-color: #007bff;
+      }
+      &.delete {
+        background-color: #dc3545;
+      }
+      margin-top: 1rem;
+      padding: 0.5rem 0.7rem;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  }
 }
